src/css/styles.css
/* ... */
html::-webkit-scrollbar {
    width: 0px;
    height: 8px;
}

html::-webkit-scrollbar:hover {
    cursor: pointer;
}

html::-webkit-scrollbar-track {
    /* background: transparent; */
    background: rgba(255, 255, 255, 0);
}

html::-webkit-scrollbar-thumb {
    background-color: #888;
    border-radius: 10px;
}


h1 {
    font-size: 30px;
    font-family: myFont2; 
    color: white;
    /* border: 1px solid yellow; */
}

h2 {
    font-size: 24px;
    font-family: myFont3;
    color: white;
}

h3 {
    font-size: 20px;
    font-family: myFont3;
    color: white;
}

/* Adjust these to only apply to the HyperChill.io Header */
@media (max-width: 400px) {
    .container h1 {
        font-size: 26px;
    }
}

@media (max-width: 354px) {
    .container h1 {
        font-size: 23px;
    }
}

h4 {
    font-family: myFont2;
    color: white;
}

#hyperChillLogoImage {
    height: 40px;
    width: 56.20px;
    margin-left: -5px;

    /* border: 1px solid red; */
    opacity: 0;
}

.hyperChillLogoRotate {
    animation: logoRotate 60s linear infinite;
}

@keyframes logoRotate {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

.caption {
    font-family: myFont2;
}

.dinkle-doink-mode {
    display: none;
    opacity: 0;
    position: relative;
    width: 102px;
    border-radius: 2rem;
    transition: opacity 1s ease-in-out;
    cursor: pointer;
    border: 3px solid white;
    z-index: 3;
}

.dinkle-doink-mode::after {
    content: "";
    background: linear-gradient(160deg, #2dd5ff 0%, #5025be 100%);
    box-shadow: 0px 3px 3px 0px rgba(5, 0, 40, 0.35);
    left: 0;
    --spot-area: 36px;
    height: var(--spot-area);
    width: var(--spot-area);
    position: absolute;
    top: calc((100% - var(--spot-area))/2);
    border-radius: 1000px;
    z-index: 6;
    transition: all 250ms ease-in-out;
    translate: calc(var(--spot-area)/4*3.675)
}

.dinkle-doink-mode:active::after {
    transform: scale(1.2);
}

body[dinkle-doink-setting=report] .dinkle-doink-mode::after {
    translate: 0
}

body[dinkle-doink-setting=home] .dinkle-doink-mode::after {
    translate: calc(var(--spot-area)/4*3.675)
}

body[dinkle-doink-setting=space] .dinkle-doink-mode::after {
    translate: calc(var(--spot-area)/2*3.675)
}

body[dinkle-doink-setting=report] .dinkle-doink-mode .caption [dinkle-doink=report] {
    display: block
}

body[dinkle-doink-setting=home] .dinkle-doink-mode .caption [dinkle-doink=home] {
    display: block
}

body[dinkle-doink-setting=space] .dinkle-doink-mode .caption [dinkle-doink=space] {
    display: block
}

.dinkle-doink-mode svg {
    position: relative;
    z-index: 10
}

.dinkle-doink-mode .caption {
    position: absolute;
    bottom: -1.75rem;
    left: 0;
    width: 100%;
    font-weight: 600;
    letter-spacing: -0.045rem;
    text-align: center
}

.dinkle-doink-mode .caption span {
    display: none;
    color: white;
    transition: color 250ms ease-in-out
}


.threeWayToggleIcon {
    width: 30px;
    height: 30px;
}

.container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 20px;

    /* border: 3px solid rgb(0, 230, 0); */
    height: 95%; 

    align-items: center;
}

.bottom {
    display: flex;
    flex-direction: row;
    justify-content: right;
    align-items: center;
    
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;

    z-index: 15;

    /* border: 3px solid rgb(230, 0, 220); */
    height: auto; /* Adjust height as needed */
    /* margin: 0; */
    box-sizing: border-box; /* Ensure padding and border are included in the element's width and height */

    margin: 25px;
}

main {
    display: block;
}

#subMainContainer {
    display: flex;
    flex-direction: column;
    /* justify-content: center; */
    align-items: center;
    margin-top: 25px;

    opacity: 0;
    transition: opacity 1s ease-in-out;
    
    /* border: 3px solid black; */
    /* overflow-x: hidden; */
}

#mainContainer {
    /* Fixed dimensions */
    position: relative;
    width: 100%;
    height: 100vh;
    /* max-width: 600px; */
    
    /* Centering it horizontally */
    margin-left: auto;
    margin-right: auto;

    align-items: center;
    flex-direction: column; 
    
    box-sizing: border-box;

    padding: 25px;

    /* border: 3px solid cyan; */
    z-index: 25;
}

@media (max-width: 504px) {
    #targetHoursInterruptionsContainer {
        flex-direction: column;
        align-items: center;
        /* border: 1px solid yellow; */
        height: 325px;
    }
    #targetHoursContainer {
        margin-right: 0px;
    }
    #chillAnimation {
        margin-top: 150px;
    }
    #flowAnimation {
        margin-top: 170px;
    }
}

.headerBtns {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    position: relative;
    /* border: 2px solid black; */
}

button {
    background-color: rgba(255, 255, 255, 0);
    color: white;
    border: 2px solid white;
    outline: none;
    padding: 8px 15px;
    cursor: pointer;
    border-radius: 15px;
    font-family: myFont3;
    font-size: 24px;
    transition: background-color 0.25s ease;
}

button:active {
    /* background-color: #e6e6e6; */
    background-color: white;
    transform: scale(0.95);
    color: black;
}

button:focus {
    box-shadow: none;
}

button:hover {
    background-color: #ffffff;
    border: 2px solid #ffffff;
    /* border-color: rgb(255, 255, 255); */
    color: black;
    /* transition: transform 0.10s ease, background-color 0.25s ease; */
}

/* Could make this styling more consistent... */
#menuBtn {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50px;
    transform: scale(0.88);

    opacity: 0;
    transition: opacity 1s ease-in-out, background-color 0.25s ease;
    border: 4px solid white;

    z-index: 2;
}

#menuIcon {
    width: 30px;
    height: 30px;
    display: flex;
    /* border: 1px solid yellow; */
}
/* ... */

